tests/type_check/build/env_build_struct_enum_name_clash.err.expected
error: at 3:14: [TC-DuplicateDeclaration] Duplicate declaration of type 'N'
   |
 3 |         enum N { A: i64 }
   |              ^
